# openapi-validator-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASES.md  artifacts.json  changelog.rss  custom.css  dist-workspace.toml  index.html  openapi-validator-proxy-installer.sh.txt  oranda.json
.github/workflows/: ci.yaml  web.yml
artifacts/: index.html
assets/: custom-book-variables.css  file.css
book/: 404.html  contributing.html  custom_headers.html  get_validation_failures.sh  install.html  introduction.html  print.html  quickstart.html  report_junit.html  reports.html  searchindex.js  searchindex.json  validation_failures.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
changelog/v0.1.2/: index.html
changelog/v0.2.0/: index.html
changelog/v0.3.0/: index.html
changelog/v0.3.1/: index.html
changelog/v0.3.2/: index.html
changelog/v0.3.3/: index.html
changelog/v0.3.4/: index.html
changelog/v0.3.5/: index.html
changelog/v0.3.6/: index.html
changelog/v0.4.0/: index.html
changelog/v0.4.1/: index.html
changelog/v0.5.0/: index.html
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  custom_headers.md  get_validation_failures.sh  install.md  introduction.md  quickstart.md  report_junit.md  reports.md  validation_failures.md
docs/theme/: 404.html  chapter_2.html  index.html  print.html  searchindex.js  searchindex.json
src/: main.rs
templates/: junit.xml
tests/: README.md  integration.rs  integration_request_validation.rs  integration_response_validation.rs  petstore.yaml
(+41 files in other folders)
