[package]
name = "openapi-validator-proxy"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/PatOConnor43/openapi-validator-proxy"
description = "A CLI application to validate OpenAPI specification requests and responses."
license = "MIT"

[dependencies]
askama = "0.12.1"
axum = "0.7.6"
axum-macros = "0.4.2"
clap = { version = "4.5.18", features = ["derive"] }
openapiv3 = "2.0.0"
regex-lite = "0.1.6"
serde = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = "2.10.1"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
wayfind = "0.5.0"

[dev-dependencies]
httpmock = "0.7.0"
insta = "1.40.0"
insta-cmd = "0.6.0"
rand = "0.8.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
